<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="30dp"
    tools:context=".AboutActivity">

  <ScrollView
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:padding="0dp">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:paddingBottom="30dp"
        android:orientation="vertical">

      <!-- Toolbar -->
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:gravity="center_vertical"
          android:paddingBottom="8dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/toolbarTitleView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="ABOUT US"
            android:textColor="@color/navy_blue"
            android:textSize="20sp"
            android:fontFamily="@font/quicksand_bold" />
      </LinearLayout>

      <!-- Divider -->
      <View
          android:layout_width="match_parent"
          android:layout_height="2dp"
          android:background="@drawable/bottom_border"
          android:layout_marginBottom="8dp"/>

      <!-- About Text -->
      <TextView
          android:id="@+id/aboutText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:fontFamily="@font/quicksand_semibold"
          android:layout_marginVertical="6dp"
          android:lineSpacingExtra="4dp"
          android:text="@string/about_us_full_text"
          android:textAlignment="center"
          android:textColor="@color/colorPrimary"
          android:textSize="16sp" />
      <!-- About Text -->
      <TextView
          android:id="@+id/aboutText1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:fontFamily="@font/quicksand_semibold"
          android:layout_marginVertical="6dp"
          android:lineSpacingExtra="4dp"
          android:text="@string/about_us_full_text1"
          android:textAlignment="center"
          android:textColor="@color/colorPrimary"
          android:textSize="16sp" />
      <!-- About Text -->
      <TextView
          android:id="@+id/aboutText2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:fontFamily="@font/quicksand_semibold"
          android:layout_marginVertical="6dp"
          android:lineSpacingExtra="4dp"
          android:text="@string/about_us_full_text2"
          android:textAlignment="center"
          android:textColor="@color/colorPrimary"
          android:textSize="16sp" />
      <!-- About Text -->
      <TextView
          android:id="@+id/aboutText3"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:fontFamily="@font/quicksand_semibold"
          android:layout_marginVertical="6dp"
          android:lineSpacingExtra="4dp"
          android:text="@string/about_us_full_text3"
          android:textAlignment="center"
          android:textColor="@color/colorPrimary"

          android:textSize="16sp" />
      <!-- About Text -->
      <TextView
          android:id="@+id/aboutText4"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:fontFamily="@font/quicksand_semibold"
          android:layout_marginVertical="6dp"
          android:lineSpacingExtra="4dp"
          android:text="@string/about_us_full_text4"
          android:textAlignment="center"
          android:textColor="@color/colorPrimary"
          android:textSize="16sp" />

      <!-- Donation Section -->
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:fontFamily="@font/quicksand_bold"
          android:text="Donation:"
          android:textAlignment="center"
          android:textSize="18sp"
          android:textColor="@color/colorPrimary" />

      <!-- Divider -->
      <View
          android:layout_width="match_parent"
          android:layout_height="2dp"
          android:background="@drawable/bottom_border"
          android:layout_marginBottom="8dp"/>

      <!-- Bitcoin -->
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginVertical="8dp"
          android:fontFamily="@font/quicksand_semibold"
          android:text="Bitcoin:"
          android:textAlignment="center"
          android:textSize="18sp"
          android:textColor="@color/colorPrimary" />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:background="@drawable/bordered_input_light"
          android:padding="8dp"
          android:layout_marginBottom="12dp">

        <TextView
            android:id="@+id/bitcoinAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand"
            android:layout_weight="1"
            android:text="@string/bitcoin_address"
            android:textIsSelectable="true"
            android:textColor="@color/colorSecondary"/>

        <ImageView
            android:id="@+id/bitcoinCopy"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/copy"
            android:contentDescription="Copy" />
      </LinearLayout>

      <!-- Monero -->
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginVertical="8dp"
          android:fontFamily="@font/quicksand_semibold"
          android:text="Monero:"
          android:textAlignment="center"
          android:textSize="18sp"
          android:textColor="@color/colorPrimary" />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:background="@drawable/bordered_input_light"
          android:padding="8dp">

        <TextView
            android:id="@+id/moneroAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/quicksand"
            android:text="@string/monero_address"
            android:textIsSelectable="true"
            android:textColor="@color/colorSecondary"/>

        <ImageView
            android:id="@+id/moneroCopy"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/copy"
            android:contentDescription="Copy" />
      </LinearLayout>

    </LinearLayout>
  </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
